🐛Event Listeners not working

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <head>
         <title>Rock Paper Scissors</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+        <script src="game.js" defer></script>
     </head>
     <body>
-        <script src="game.js"></script>
+        <button id="rps" data-button="rock">Rock</button>
+        <button id="rps" data-button="paper">Paper</button>
+        <button id="rps" data-button="scissors">Scissors</button>
     </body>
 </html>
