--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="media/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="media/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="media/favicon-16x16.png">
         <link rel="manifest" href="/media/site.webmanifest">  
         <script src="game.js" defer></script>
 
